--- a/public/home.html
+++ b/public/home.html
@@ -24,7 +24,7 @@
 <body>
 
     <h1>
-        Hey, how you doing...
+        Hey... how you doing?
     </h1>
 
     <script src="" async defer></script>
